--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,11 +37,11 @@
 
 body{background:#f6f8fa;}
 aside{background:#fff;}
-main>.container{margin:15px auto;padding:5px 30px 10px 30px;width:1200px!important;border-radius:8px;background:#fff;}
-
+main>.container{margin:15px auto;padding:5px 30px 10px 30px;width:1000px!important;border-radius:8px;background:#fff;}
+main>.container>.row>.col.col--2{width:200px;position:fixed;top:100px;right:0;}
+main>.container>.row>.col.col--3{width:230px;position:fixed;top:100px;right:0;}
 /*
 main>.container>.row>.col{width:100%;}
-main>.container>.row>.col.col--3{width:230px;position:fixed;top:100px;right:0;}
 
 
 
@@ -70,8 +70,8 @@ main>.container{margin:15px auto;padding:10px 30px 20px 30px;width:960px!importa
 .markdown>h4{margin:1rem 0 0.618rem 0;padding-bottom:0.25rem;font-size:1.5rem;}
 .markdown>h5{margin:0.8rem 0 0.5rem;padding-bottom:0.15rem;font-size:1.4rem;}
 .markdown>h6{margin:0.618rem 0 0.35rem;padding-bottom:0.13rem;font-size:1.3rem;}
-.markdown>header{margin:0 -30px;padding:0 30px;
-height:62px;line-height:6px;
+.markdown>header{
+margin-bottom:20px;height:62px;line-height:6px;
 border-bottom:3px solid #ddd;}
 .markdown>header>h1{
 margin:0;height:53px;line-height:53px;border:none;
