--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -67,28 +67,22 @@ font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,A
 }
 
 .markdown.theme-doc-markdown>header{margin-bottom:18px;padding:5px 0 8px 0;position:relative;}
-.markdown.theme-doc-markdown>header>h1{margin:0;font-size:30px;font-family:"Microsoft yahei";color:#222226;}
+.markdown.theme-doc-markdown>header>h1{margin:0;font-size:30px;color:#222226;}
 .markdown.theme-doc-markdown>header::after{width:calc(100% + 60px);
-	border-bottom:2px solid #ddd;
-position:absolute;left:-30px;right:-30px;bottom:0;height:2px;content:"";}
+	border-bottom:2px solid #efefef;position:absolute;left:-30px;right:-30px;bottom:0;height:2px;content:"";}
 
 
 .markdown.theme-doc-markdown>h2,
 .markdown.theme-doc-markdown>h3,
 .markdown.theme-doc-markdown>h4,
 .markdown.theme-doc-markdown>h5,
-.markdown.theme-doc-markdown>h6{color:#333;}
+.markdown.theme-doc-markdown>h6{padding-bottom:.038em;font-family: roboto,sans-serif!important;color:#333;border-bottom:3px double #efefef;}
 
-.markdown.theme-doc-markdown>h2{
-	padding-bottom:.1em;
-	line-height:32px;font-size: 1.5em;
-	font-weight:600;
-	border-bottom:3px double #d0d7deb3;
-}
-.markdown.theme-doc-markdown>h3{line-height:28px;font-size:20px;border-bottom:3px double #eee;}
-.markdown.theme-doc-markdown>h4{line-height:40px;font-size:18px;border-bottom:3px double #eee;}
-.markdown.theme-doc-markdown>h5{line-height:40px;font-size:18px;border-bottom:3px double #eee;}
-.markdown.theme-doc-markdown>h6{line-height:40px;font-size:18px;border-bottom:3px double #eee;}
+.markdown.theme-doc-markdown>h2{line-height:32px;font-size: 1.5em;font-weight:600;}
+.markdown.theme-doc-markdown>h3{line-height:30px;font-size: 1.4em;}
+.markdown.theme-doc-markdown>h4{line-height:28px;font-size:1.3em;}
+.markdown.theme-doc-markdown>h5{line-height:24px;font-size:1.2em;}
+.markdown.theme-doc-markdown>h6{line-height:20px;font-size:1.15em;}
 .markdown.theme-doc-markdown>table{width:100%;display:table;}
 .markdown.theme-doc-markdown> blockquote {
   background: #eef0f4;
