--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -66,8 +66,11 @@ font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,A
   word-wrap: break-word;
 }
 
-.markdown.theme-doc-markdown>header{margin-bottom:18px;padding:5px 0 8px 0;position:relative;}
-.markdown.theme-doc-markdown>header>h1{margin:0;font-size:30px;color:#222226;}
+.markdown.theme-doc-markdown>header{margin-bottom:15px;padding:10px 0;position:relative;}
+
+.markdown.theme-doc-markdown>header>h1{margin:0;font-size:30px;line-height:40px;color:#222226;}
+
+
 .markdown.theme-doc-markdown>header::after{width:calc(100% + 60px);
 	border-bottom:2px solid #efefef;position:absolute;left:-30px;right:-30px;bottom:0;height:2px;content:"";}
 
